contact section updated

--- a/index.html
+++ b/index.html
@@ -483,6 +483,12 @@
                 >LinkedIn</a
               >
             </button>
+            <button class="btn btn-lg my-font btn-dark rounded">
+              <a class="text-light"
+                href="https://github.com/Er-nitinpratapsingh"
+                >GitHub</a
+              >
+            </button>
           </div>
         </div>
         <!-- end of row -->
@@ -631,8 +637,39 @@
       <div class="container text-center">
         <p class="section-subtitle">How can you communicate?</p>
         <h6 class="section-title mb-5">Contact Me</h6>
+        <div class="row">
+
+          <!-- <div class="info-wrap"> -->
+            <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+              <i class="bi bi-geo-alt flex-shrink-0"></i>
+              <div>
+                <h3>Address</h3>
+                <p>Malviya Nagar, New Delhi, Delhi 110017
+                  India</p>
+              </div>
+            </div><!-- End Info Item -->
+
+            <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-telephone flex-shrink-0"></i>
+              <div>
+                <h3>Call Us</h3>
+                <p>+91-74099 88996</p>
+              </div>
+            </div><!-- End Info Item -->
+
+            <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+              <i class="bi bi-envelope flex-shrink-0"></i>
+              <div>
+                <h3>Email Us</h3>
+                <p>nitin.pratap.singh101@gmail.com</p>
+              </div>
+            </div><!-- End Info Item -->
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14020.648141305313!2d77.19942993646696!3d28.534848962773374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce21e7d306d03%3A0x94b8ccb323d7648!2sMalviya%20Nagar%2C%20New%20Delhi%2C%20Delhi%20110017%2C%20India!5e0!3m2!1sen!2sus!4v1740252672104!5m2!1sen!2sus" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <!-- </div> -->
+        </div>
         <!-- contact form -->
-        <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
+        <!-- <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
           <div class="form-row">
             <div class="form-group col-sm-6">
               <input
@@ -668,7 +705,7 @@
               />
             </div>
           </div>
-        </form>
+        </form> -->
         <!-- end of contact form -->
       </div>
       <!-- end of container -->
