--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
     />
     <!-- Bootstrap + Meyawo main styles -->
     <link rel="stylesheet" href="assets/css/meyawo.css" />
+    <style>
+      :root {
+            --primary-color: #3a0ca3;
+            --secondary-color: #4361ee;
+            --light-color: #f8f9fa;
+            --dark-color: #212529;
+        }
+      .skill-badge {
+            margin: 5px;
+            padding: 8px 15px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: 500;
+            background-color: #e9ecef;
+            color: var(--dark-color);
+            transition: background-color 0.3s;
+        }
+
+        .skill-badge:hover {
+            background-color: var(--secondary-color);
+            color: rgb(240, 240, 243);
+        }
+    </style>
   </head>
 
   <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -66,9 +89,14 @@
           <span class="down">I am Nitin Pratap Singh</span>
         </h1>
         <p class="header-subtitle">Software Engineer (FullStack)</p>
-
         <button class="btn btn-primary">
           <a class="text-light" href="#portfolio">Visit My Works</a>
+        </button>
+        <button
+          class="btn-rounded btn btn-outline-primary mt-4"
+          id="downloadButton"
+        >
+          Download CV
         </button>
       </div>
     </header>
@@ -96,23 +124,240 @@
               that enhance business growth. I am passionate about customer
               problem-solving with my technical skills. I also stay updated with
               the latest industry trends.
-              <br />leveraging expertise in Magento 2, Laravel, PHP, MySQL, and
+              <!-- <br />leveraging expertise in Magento 2, Laravel, PHP, MySQL, and
               Nginx to deliver scalable, highperformance robust and scalable
               solutions that meet complex business needs. Good communication and
               organisational skills, Quick learner. Result-orientated and able
               to work independently as well as in teams. Creative, positive
               attitude, ready to learn new concepts. Having a good and Educated
-              Background, I value discipline and honesty.
+              Background, I value discipline and honesty. -->
             </p>
-            <button
-              class="btn-rounded btn btn-outline-primary mt-4"
-              id="downloadButton"
-            >
-              Download CV
-            </button>
+
+            <!-- <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+              <i class="bi bi-geo-alt flex-shrink-0"></i> -->
+            <!-- <div>
+              <h3>Address</h3>
+              <p>Malviya Nagar, New Delhi, Delhi 110017 India</p>
+            </div> -->
+            <div class="col-lg-6">
+              <div class="card border-0 shadow-sm">
+                <div class="card-body">
+                  <h5 class="mb-3">Key Expertise Areas</h5>
+                  <div class="d-flex flex-wrap">
+                    <div class="progress-wrapper w-100 mb-3">
+                      <div class="d-flex justify-content-between">
+                        <span>Full-Stack Development</span>
+                        <span>95%</span>
+                      </div>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-primary"
+                          role="progressbar"
+                          style="width: 95%"
+                          aria-valuenow="95"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="progress-wrapper w-100 mb-3">
+                      <div class="d-flex justify-content-between">
+                        <span>DevOps & Cloud Platforms</span>
+                        <span>85%</span>
+                      </div>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-primary"
+                          role="progressbar"
+                          style="width: 85%"
+                          aria-valuenow="85"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="progress-wrapper w-100 mb-3">
+                      <div class="d-flex justify-content-between">
+                        <span>Database Management</span>
+                        <span>90%</span>
+                      </div>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-primary"
+                          role="progressbar"
+                          style="width: 90%"
+                          aria-valuenow="90"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="progress-wrapper w-100">
+                      <div class="d-flex justify-content-between">
+                        <span>Digital Marketing & CMS</span>
+                        <span>80%</span>
+                      </div>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-primary"
+                          role="progressbar"
+                          style="width: 80%"
+                          aria-valuenow="80"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                        ></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- </div> -->
           </div>
         </div>
+
         <!-- end of about wrapper -->
+      </div>
+      <!-- Skills Section -->
+      <div class="row mb-5 mt-3">
+        <!-- Front-End Skills -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0">
+                <i class="fas fa-laptop-code me-2"></i> Front-End
+              </h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">HTML</span>
+                <span class="skill-badge">CSS</span>
+                <span class="skill-badge">JavaScript</span>
+                <span class="skill-badge">Bootstrap</span>
+                <span class="skill-badge">jQuery</span>
+                <span class="skill-badge">Ajax</span>
+                <span class="skill-badge">JSON</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Back-End Skills -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0"><i class="fas fa-server me-2"></i> Back-End</h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">PHP</span>
+                <span class="skill-badge">Laravel</span>
+                <span class="skill-badge">CodeIgniter</span>
+                <span class="skill-badge">Zend</span>
+                <span class="skill-badge">REST API</span>
+                <span class="skill-badge">GraphQL</span>
+                <span class="skill-badge">LAMP</span>
+                <span class="skill-badge">LEMP</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Database Skills -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0">
+                <i class="fas fa-database me-2"></i> Databases
+              </h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">MySQL</span>
+                <span class="skill-badge">Redis</span>
+                <span class="skill-badge">ElasticSearch</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- DevOps & Version Control -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0">
+                <i class="fas fa-code-branch me-2"></i> DevOps & Version Control
+              </h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">Git</span>
+                <span class="skill-badge">GitHub</span>
+                <span class="skill-badge">BitBucket</span>
+                <span class="skill-badge">JIRA</span>
+                <span class="skill-badge">Jenkins</span>
+                <span class="skill-badge">Docker</span>
+                <span class="skill-badge">Varnish</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Platform & Cloud -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0">
+                <i class="fas fa-cloud me-2"></i> Platform & Cloud
+              </h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">Windows</span>
+                <span class="skill-badge">Linux</span>
+                <span class="skill-badge">AWS</span>
+                <span class="skill-badge">Azure</span>
+                <span class="skill-badge">Nginx</span>
+                <span class="skill-badge">Apache</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- CMS & Digital Marketing -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0">
+                <i class="fas fa-paint-brush me-2"></i> CMS & Digital Marketing
+              </h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">WordPress</span>
+                <span class="skill-badge">Magento 2</span>
+                <span class="skill-badge">Facebook Pixel</span>
+                <span class="skill-badge">Google Tag Manager</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Networking -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="skill-card card shadow-sm h-100">
+            <div class="card-header">
+              <h4 class="mb-0">
+                <i class="fas fa-network-wired me-2"></i> Networking
+              </h4>
+            </div>
+            <div class="card-body">
+              <div class="d-flex flex-wrap">
+                <span class="skill-badge">CCNA</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- end of container -->
     </section>
@@ -484,7 +729,8 @@
               >
             </button>
             <button class="btn btn-lg my-font btn-dark rounded">
-              <a class="text-light"
+              <a
+                class="text-light"
                 href="https://github.com/Er-nitinpratapsingh"
                 >GitHub</a
               >
@@ -636,36 +882,43 @@
     <section class="section" id="contact">
       <div class="container text-center">
         <p class="section-subtitle">How can you communicate?</p>
-        <h6 class="section-title mb-5">Contact Me</h6>
+        <h6 class="section-title mb-5">Get In Touch</h6>
         <div class="row">
-
           <!-- <div class="info-wrap"> -->
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-              <i class="bi bi-geo-alt flex-shrink-0"></i>
-              <div>
-                <h3>Address</h3>
-                <p>Malviya Nagar, New Delhi, Delhi 110017
-                  India</p>
-              </div>
-            </div><!-- End Info Item -->
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+            <i class="bi bi-geo-alt flex-shrink-0"></i>
+            <div>
+              <h3>Address</h3>
+              <p>Malviya Nagar, New Delhi, Delhi 110017 India</p>
+            </div>
+          </div>
+          <!-- End Info Item -->
 
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>Call Us</h3>
-                <p>+91-74099 88996</p>
-              </div>
-            </div><!-- End Info Item -->
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <i class="bi bi-telephone flex-shrink-0"></i>
+            <div>
+              <h3>Call</h3>
+              <p>+91-74099 88996</p>
+            </div>
+          </div>
+          <!-- End Info Item -->
 
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-envelope flex-shrink-0"></i>
-              <div>
-                <h3>Email Us</h3>
-                <p>nitin.pratap.singh101@gmail.com</p>
-              </div>
-            </div><!-- End Info Item -->
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+            <i class="bi bi-envelope flex-shrink-0"></i>
+            <div>
+              <h3>Email</h3>
+              <p>nitin.pratap.singh101@gmail.com</p>
+            </div>
+          </div>
+          <!-- End Info Item -->
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14020.648141305313!2d77.19942993646696!3d28.534848962773374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce21e7d306d03%3A0x94b8ccb323d7648!2sMalviya%20Nagar%2C%20New%20Delhi%2C%20Delhi%20110017%2C%20India!5e0!3m2!1sen!2sus!4v1740252672104!5m2!1sen!2sus" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14020.648141305313!2d77.19942993646696!3d28.534848962773374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce21e7d306d03%3A0x94b8ccb323d7648!2sMalviya%20Nagar%2C%20New%20Delhi%2C%20Delhi%20110017%2C%20India!5e0!3m2!1sen!2sus!4v1740252672104!5m2!1sen!2sus"
+            style="border: 0; width: 100%; height: 270px"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
           <!-- </div> -->
         </div>
         <!-- contact form -->
