--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="link" href="#about">About</a>
           </li>
           <li class="item">
-            <a class="link" href="#portfolio">Projects</a>
+            <a class="link" href="#portfolio">Portfolio</a>
           </li>
           <!-- <li class="item">
                     <a class="link" href="#testmonial">Testmonial</a>
@@ -425,7 +425,7 @@
     <section class="section" id="portfolio">
       <div class="container text-center">
         <p class="section-subtitle">What I Did ?</p>
-        <h6 class="section-title mb-6">Projects</h6>
+        <h6 class="section-title mb-6">Portfolio</h6>
         <!-- row-1 -->
         <div class="row">
           <div class="col-md-4">
