update resume and add ai section or favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Nitin Pratap Singh</title>
+    <title>Full Stack + AI Enthusiast</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon/ai.png"> 
+    <!-- <a href="https://www.flaticon.com/free-icons/alphabet" title="alphabet icons">Alphabet icons created by Freepik - Flaticon</a> -->
     <!-- font icons -->
     <link
       rel="stylesheet"
@@ -252,6 +254,7 @@
               <div class="card-body">
                 <div class="d-flex flex-wrap">
                   <span class="skill-badge">MySQL</span>
+                  <span class="skill-badge">PostgreSQL</span>
                   <span class="skill-badge">Redis</span>
                   <span class="skill-badge">ElasticSearch</span>
                 </div>
@@ -328,12 +331,20 @@
             <div class="skill-card card shadow-sm h-100">
               <div class="card-header">
                 <h4 class="mb-0">
-                  <i class="fas fa-network-wired me-2"></i> Networking
+                  <i class="fas fa-network-wired me-2"></i> Networking & AI
                 </h4>
               </div>
               <div class="card-body">
                 <div class="d-flex flex-wrap">
                   <span class="skill-badge">CCNA</span>
+                  <span class="skill-badge">ChatGPT</span>
+                  <span class="skill-badge">Deep Seek</span>
+                  <span class="skill-badge">Copilot</span>
+                  <span class="skill-badge">Claude</span>
+                  <span class="skill-badge">B 12</span>
+                  <span class="skill-badge">BLACKBOX.AI</span>
+                  <span class="skill-badge">Codeium</span>
+                  <span class="skill-badge">Gemini</span>
                 </div>
               </div>
             </div>
