Update the headings

--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
             />
           </div>
           <div class="about-caption">
-            <p class="section-subtitle">Who Am I ?</p>
-            <h2 class="section-title mb-3">About Me</h2>
+            <!-- <p class="section-subtitle">Who Am I ?</p>
+            <h2 class="section-title mb-3">About Me</h2> -->
+            <h2 class="section-title mb-3">Who Am I ?</h2>
             <p>
               Hi, I am NITIN PRATAP SINGH. I have 6+ years of experience as an
               IT Professional. I deliver scalable and efficient IT solutions
@@ -435,8 +436,9 @@
     <!-- portfolio section -->
     <section class="section" id="portfolio">
       <div class="container text-center">
-        <p class="section-subtitle">What I Did ?</p>
-        <h6 class="section-title mb-6">Portfolio</h6>
+        <!-- <p class="section-subtitle">What I Did ?</p>
+        <h6 class="section-title mb-6">Portfolio</h6> -->
+        <h6 class="section-title mb-6">What I Did ?</h6>
         <!-- row-1 -->
         <div class="row">
           <div class="col-md-4">
@@ -875,14 +877,15 @@
     <!-- contact section -->
     <section class="section" id="contact">
       <div class="container text-center">
-        <p class="section-subtitle">How can you communicate?</p>
-        <h6 class="section-title mb-5">Get In Touch</h6>
+        <!-- <p class="section-subtitle">How can you communicate?</p>
+        <h6 class="section-title mb-5">Get In Touch</h6> -->
+        <h6 class="section-title mb-5">How can we communicate?</h6>
         <div class="row">
           <!-- <div class="info-wrap"> -->
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
             <i class="bi bi-geo-alt flex-shrink-0"></i>
             <div>
-              <h3>Address</h3>
+              <h3 class="section-title">Address</h3>
               <p>Malviya Nagar, New Delhi, Delhi 110017 India</p>
             </div>
           </div>
@@ -891,7 +894,7 @@
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <i class="bi bi-telephone flex-shrink-0"></i>
             <div>
-              <h3>Call</h3>
+              <h3 class="section-title">Call</h3>
               <p>+91-74099 88996</p>
             </div>
           </div>
@@ -900,7 +903,7 @@
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
             <i class="bi bi-envelope flex-shrink-0"></i>
             <div>
-              <h3>Email</h3>
+              <h3 class="section-title">Email</h3>
               <p>nitin.pratap.singh101@gmail.com</p>
             </div>
           </div>
