Updated the skills.

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
             <h2 class="section-title mb-3">About Me</h2> -->
             <h2 class="section-title mb-3">Who Am I ?</h2>
             <p>
-              I am Nitin Pratap Singh and I started my IT career as a Technical Support Engineer, where I
-              supported online examination systems and helped test centres with
-              setup and issue resolution. Later, I moved into software
-              development and worked with PHP frameworks such as Laravel and
-              CodeIgniter. Currently, I work as a Software Developer with a
-              focus on Magento development. I have experience deploying Magento
-              on Nginx servers, I use Git for version control, and managing work
-              through Jira. I am also learning CI/CD to automate development and
-              deployment tasks.
+              I am Nitin Pratap Singh and I started my IT career as a Technical
+              Support Engineer, where I supported online examination systems and
+              helped test centres with setup and issue resolution. Later, I
+              moved into software development and worked with PHP frameworks
+              such as Laravel and CodeIgniter. Currently, I work as a Software
+              Developer with a focus on Magento development. I have experience
+              deploying Magento on Nginx servers, I use Git for version control,
+              and managing work through Jira. I am also learning CI/CD to
+              automate development and deployment tasks.
               <!-- <br />leveraging expertise in Magento 2, Laravel, PHP, MySQL, and
               Nginx to deliver scalable, highperformance robust and scalable
               solutions that meet complex business needs. Good communication and
@@ -212,15 +212,17 @@
               </div>
               <div class="card-body">
                 <div class="d-flex flex-wrap">
-                  <span class="skill-badge">HTML</span>
-                  <span class="skill-badge">CSS</span>
-                  <span class="skill-badge">JavaScript</span>
+                  <span class="skill-badge">HTML5</span>
+                  <span class="skill-badge">CSS3</span>
+                  <span class="skill-badge">JavaScript (ES6+)</span>
                   <span class="skill-badge">Bootstrap</span>
                   <span class="skill-badge">jQuery</span>
                   <span class="skill-badge">Ajax</span>
                   <span class="skill-badge">JSON</span>
+                  <span class="skill-badge">Knockout.js</span>
                   <span class="skill-badge">Flutter</span>
                   <span class="skill-badge">Dart</span>
+                  <span class="skill-badge">Responsive UI</span>
                 </div>
               </div>
             </div>
@@ -236,12 +238,16 @@
               </div>
               <div class="card-body">
                 <div class="d-flex flex-wrap">
-                  <span class="skill-badge">PHP</span>
+                  <span class="skill-badge">PHP 7.x / 8.x</span>
                   <span class="skill-badge">Laravel</span>
                   <span class="skill-badge">CodeIgniter</span>
                   <span class="skill-badge">Zend</span>
-                  <span class="skill-badge">REST API</span>
+                  <span class="skill-badge">RESTful APIs</span>
                   <span class="skill-badge">GraphQL</span>
+                  <span class="skill-badge"
+                    >Order Management Systems (OMS)</span
+                  >
+                  <span class="skill-badge">Composer</span>
                   <span class="skill-badge">LAMP</span>
                   <span class="skill-badge">LEMP</span>
                 </div>
@@ -249,12 +255,12 @@
             </div>
           </div>
 
-          <!-- Database Skills -->
+          <!-- Databases & Caching -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="skill-card card shadow-sm h-100">
               <div class="card-header">
                 <h4 class="mb-0">
-                  <i class="fas fa-database me-2"></i> Databases
+                  <i class="fas fa-database me-2"></i> Databases & Caching
                 </h4>
               </div>
               <div class="card-body">
@@ -262,7 +268,10 @@
                   <span class="skill-badge">MySQL</span>
                   <span class="skill-badge">PostgreSQL</span>
                   <span class="skill-badge">Redis</span>
-                  <span class="skill-badge">ElasticSearch</span>
+                  <span class="skill-badge">Elasticsearch</span>
+                  <span class="skill-badge">Varnish</span>
+                  <span class="skill-badge">Indexing</span>
+                  <span class="skill-badge">EAV Model</span>
                 </div>
               </div>
             </div>
@@ -282,10 +291,12 @@
                   <span class="skill-badge">Git</span>
                   <span class="skill-badge">GitHub</span>
                   <span class="skill-badge">BitBucket</span>
-                  <span class="skill-badge">JIRA</span>
+                  <span class="skill-badge">Jira</span>
                   <span class="skill-badge">Jenkins</span>
                   <span class="skill-badge">Docker</span>
-                  <span class="skill-badge">Varnish</span>
+                  <span class="skill-badge">CI/CD</span>
+                  <span class="skill-badge">Nginx</span>
+                  <span class="skill-badge">Apache</span>
                 </div>
               </div>
             </div>
@@ -301,38 +312,66 @@
               </div>
               <div class="card-body">
                 <div class="d-flex flex-wrap">
-                  <span class="skill-badge">Windows</span>
                   <span class="skill-badge">Linux</span>
-                  <span class="skill-badge">AWS</span>
+                  <span class="skill-badge">Windows Server</span>
+                  <span class="skill-badge">AWS (EC2, S3)</span>
                   <span class="skill-badge">Azure</span>
-                  <span class="skill-badge">Nginx</span>
-                  <span class="skill-badge">Apache</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- CMS & Digital Marketing -->
+          <!-- CMS & E‑Commerce -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="skill-card card shadow-sm h-100">
               <div class="card-header">
                 <h4 class="mb-0">
-                  <i class="fas fa-paint-brush me-2"></i> CMS & Digital
-                  Marketing
+                  <i class="fas fa-store me-2"></i> CMS & E‑Commerce
                 </h4>
               </div>
               <div class="card-body">
                 <div class="d-flex flex-wrap">
+                  <span class="skill-badge"
+                    >Magento 2 (Community & Adobe Commerce)</span
+                  >
+                  <span class="skill-badge">Magento Cloud</span>
+                  <span class="skill-badge">Headless Magento (PWA)</span>
                   <span class="skill-badge">WordPress</span>
-                  <span class="skill-badge">Magento 2</span>
-                  <span class="skill-badge">Facebook Pixel</span>
-                  <span class="skill-badge">Google Tag Manager</span>
+                  <span class="skill-badge">Custom Module Development</span>
+                  <span class="skill-badge"
+                    >Plugin & Observer Architecture</span
+                  >
+                  <span class="skill-badge">Cart Rules & Promotions</span>
+                  <span class="skill-badge">Checkout Customization</span>
+                  <span class="skill-badge">Payment Gateway Integration</span>
+                  <span class="skill-badge"
+                    >API Development (REST & GraphQL)</span
+                  >
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Networking -->
+          <!-- Analytics & Marketing -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="skill-card card shadow-sm h-100">
+              <div class="card-header">
+                <h4 class="mb-0">
+                  <i class="fas fa-bullhorn me-2"></i> Analytics & Marketing
+                </h4>
+              </div>
+              <div class="card-body">
+                <div class="d-flex flex-wrap">
+                  <span class="skill-badge">Facebook Pixel</span>
+                  <span class="skill-badge">Google Tag Manager</span>
+                  <span class="skill-badge">Salesforce API</span>
+                  <span class="skill-badge">Postman</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Networking & AI -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="skill-card card shadow-sm h-100">
               <div class="card-header">
@@ -344,10 +383,10 @@
                 <div class="d-flex flex-wrap">
                   <span class="skill-badge">CCNA</span>
                   <span class="skill-badge">ChatGPT</span>
-                  <span class="skill-badge">Deep Seek</span>
+                  <span class="skill-badge">DeepSeek</span>
                   <span class="skill-badge">Copilot</span>
                   <span class="skill-badge">Claude</span>
-                  <span class="skill-badge">B 12</span>
+                  <span class="skill-badge">B12</span>
                   <span class="skill-badge">BLACKBOX.AI</span>
                   <span class="skill-badge">Codeium</span>
                   <span class="skill-badge">Gemini</span>
@@ -356,6 +395,7 @@
             </div>
           </div>
         </div>
+
         <!-- end of about wrapper -->
       </div>
 
